fix: hide scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,3 +90,12 @@ body {
     @apply bg-background text-foreground;
   }
 }
+/* width */
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: none;
+}
